[project]
name = "job-mcp"
version = "0.1.0"
description = "this is a venv for this project"
authors = [
    {name = "Deepika-cloud-code",email = "vaddadi.d@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp (>=1.27.1,<2.0.0)",
    "playwright (>=1.60.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
